<resources>
    <string name="app_name">RipeAtlas2Go</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ripe Atlas 2 Go</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_measurements">Measurements</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_api_keys">Api Keys</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="title_activity_measurement">MeasurementActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="id">ID</string>
    <string name="type">Type</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="probes">Probes</string>
    <string name="status">Status</string>
    <string name="uuid">UUID</string>
    <string name="label">Label</string>
    <string name="valid_from">Valid from</string>
    <string name="valid_to">Valid to</string>
    <string name="enabled">Enabled</string>

    <string name="add_msm">Add Measurement</string>
    <string name="create_msm">Create Measurement</string>
    <string name="add_api_keys">Add Api Keys</string>
    <string name="create_api_key">Create Api Key</string>
    <string name="introduction">Introduction</string>
    <string name="intro_create_api_Key">It is possible to authenticate with the REST API using API keys. API keys let you access restricted data and perform certain actions without signing in to the RIPE NCC Access single sign-on system.\n
        Each API key allows a set of actions to be performed in your name. For example, a single key may allow the creation of a new user-defined measurement and also allow hidden information about your probe to be viewed.\n
        The two main reasons for using API keys are to:\n
        &#8226; Make it simpler to write scripts that use RIPE Atlas data (such as this app)\n
        &#8226; Allow you to easily and securely share data with other people</string>
    <string name="creating_api_keys">Creating Api Keys</string>
    <string name="info_creating_api_Key">New keys can be created using the key management screen.\n
        You will be presented with the following choices:\n
        &#8226; Label: This is a free-text string that you can use to help organise your keys.\n
        &#8226; Valid from: Keys won\'t work until this time. If you leave this blank, they will be effective immediately.\n
        &#8226; Valid to: Keys will stop working at this time. If you leave this blank, your key will never automatically expire.\n
        &#8226; Enabled: Keys will not work unless this is on.\n
        You should add one or more grants to your key to assign particular permissions. Each grant takes the following options:\n
        &#8226; Permission: This is the specific type of permission you want to assign. A permission will generally correspond to one function and one API URL prefix.\n
        &#8226; Target: This limits the grant to providing access either to a specific object that you own, such as an individual probe or user-defined measurement. With some permissions, you can provide access to all objects of the relevant type. Note: In some cases, the target option is not applicable.
</string>
    <string name="header_column12">Permissions</string>
    <string name="current_time">Current Time</string>
    <string name="created">Created</string>
    <string name="api_key">API Key</string>
    <string name="communicate">Communicate</string>
    <string name="info">Info</string>
    <string name="msm">Measurement</string>
    <string name="tab_text_1">Settings &amp; Status</string>
    <string name="tab_text_2">Latest Results</string>

    <string name="overview">Overview</string>

    <string name="description">Description</string>
    <string name="address_family_and_type">Address Family and Type</string>
    <string name="part_of_group">Part of Group</string>
    <string name="one_off_or_recurring">One-Off or Recurring</string>
    <string name="target">Target</string>
    <string name="requested">Requested</string>
    <string name="specific_settings">Specific Settings</string>
    <string name="specific_data">Specific Data</string>
    <string name="status_and_time">Status and Time</string>
    <string name="current_status">Current Status</string>
    <string name="system_time">System Time</string>
    <string name="requested_time">Requested Time</string>
    <string name="interval_and_spread">Interval and Spread</string>
    <string name="resolved_on_probe">Resolved on Probe</string>
    <string name="placeholder">-</string>
    <string name="transfer_credits">Transfer Credits</string>
    <string name="check_credits">Check Credits</string>
    <string name="balance">Balance</string>
    <string name="estimated_daily_income">Daily Income</string>
    <string name="daily_income">Daily Income</string>
    <string name="daily_expenditure">Daily Expenditure</string>
    <string name="new_daily_balance">New Daily Balance</string>
    <string name="estimated_balance">Estimated Balance</string>
    <string name="transactions">Transactions</string>
    <string name="runout_seconds">Runout Seconds</string>
    <string name="last_date_credited">Last Date Credited</string>
    <string name="last_date_debited">Last Date Debited</string>
    <string name="calculation_time">Calculation Time</string>
    <string name="recipient">Recipient</string>
    <string name="amount">Amount</string>
    <string name="check_your_measurement_activities">Check your Measurement activities</string>
    <string name="check_your_credit_activities">Check your Credit activities</string>
    <string name="check_your_api_keys_activities">Check your API Keys activities</string>
    <string name="text_about_1">This App is part of my Master Thesis called \"Untersuchung zum Einsatz der RIPE Atlas Plattform für Messung von Internet Diensten\".
        The platform RIPE Atlas is building the largest Internet measurement network.
        With your help, you can expand the network, if you become an user and host your own probe.
        For further information check out the RIPE Atlas website:
    </string>
    <string name="ripe_atlas_link">https://atlas.ripe.net/about/<a href="https://atlas.ripe.net/" /></string>
    <string name="text_about_2">As user you can perform your own measurements and test your own targets.
        This App allows you to monitor your profile with your Measurements, Credits and API Keys.
        For the functionality the app uses the RIPE Atlas API.
        The manual can be found here:
    </string>
    <string name="ripe_atlas_api_link">https://atlas.ripe.net/docs/api/v2/manual/<a href="https://atlas.ripe.net/docs/api/v2/manual/" /></string>
    <string name="specific_data_hint">Here you will find data about the specific measurement type&#8230;</string>
    <string name="delete_measurements">Delete Measurements</string>
    <string name="delete_api_keys">Delete API Keys</string>
    <string name="ipv6">IPv6</string>
    <string name="ipv4">IPv4</string>
    <string name="address_family">Address Family</string>
    <string name="definition">Definition</string>
    <string name="value">Value</string>
    <string name="numberOfProbes">Number of Probes</string>
    <string name="timing">Timing</string>
    <string name="one_off">One-off</string>
    <string name="menu_how_to">Howto</string>
    <string name="getting_started">Getting Started</string>
    <string name="howto_one">1. Create all necessary API Keys via the website:</string>
    <string name="ripe_atlas_link_keys">https://atlas.ripe.net/keys/</string>
    <string name="howto_two">2. Go to API Keys to add all your created keys to the app.</string>
    <string name="howto_three">3. Click \"Add API Keys\" and type the UUID of the API Key with the permission \"List all of your api keys\". To ease the typing of the long UUID, you can create a QR Code of the UUID and scan this code. To create a QR Code use a online tool like this:</string>
    <string name="ripe_atlas_link_qr">https://qrcode.tec-it.com/</string>
    <string name="howto_four">4. Finally you see all your imported keys in the list view. Now you can start with the other activities.</string>
    <string name="howto_credit_one">1. Go to Credits and check your actual information about your credits.</string>
    <string name="howto_credit_two">2. Click \"Check Credits\" and choose your API Key with the permission \"Get information about your credits\".</string>
    <string name="howto_credit_three">3. It\'s theoretically possible to transfer credits to other users, but it\'s temporally not possible (seems to be a bug of the RIPE Atlas API)</string>
    <string name="howto_msm_one">1. Go to Measurements to add or create measurements.</string>
    <string name="howto_msm_two">2. Click \"Add Measurements\" to add measurements to the app. You can choose between all, a typical type or a specific measurement. For a couple of measurements use an API Key with the permission \"List your measurements\". For a specific measurement use an API Key with the permission \"Get results from a non-public measurement\" and specify the measurement with his ID.</string>
    <string name="howto_msm_three">3. Finally you see all your imported measurements in the list view. Click on a measurement element to get detailed information.</string>
    <string name="howto_msm_four">4. Click \"Create Measurement\" to create a new measurement via the app. You can specify your parameters via an input wizzard.</string>
    <string name="howto_msm_five">5. Finally you see an ID of your created measurement. Now you can also add this measurement to the list view.</string>
    <string name="description_ping">Ping measurement</string>
    <string name="description_traceroute">Traceroute measurement</string>
    <string name="description_ssl">SSL measurement</string>

    <string-array name="msm_array">
        <item>All Measurements</item>
        <item>All Ping Measurements</item>
        <item>All Traceroute Measurements</item>
        <item>All DNS Measurements</item>
        <item>All SSL Measurements</item>
        <item>Specific Measurement by ID</item>
    </string-array>
    <string-array name="type_array">
        <item>Ping</item>
        <item>Traceroute</item>
        <!--        <item>DNS</item> not implemented yet-->
        <item>SSL</item>
    </string-array>
    <string-array name="probe_type_array">
        <item>Area</item>
        <item>Country</item>
        <item>Prefix</item>
        <item>ASN</item>
        <item>Probes</item>
        <item>Measurements</item>
    </string-array>
</resources>
