<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_measurements"
            android:icon="@drawable/ic_menu_measurements"
            android:title="@string/menu_measurements" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_menu_credits"
            android:title="@string/menu_credits" />
        <item
            android:id="@+id/nav_api_keys"
            android:icon="@drawable/ic_menu_api_keys"
            android:title="@string/menu_api_keys" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
