<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollViewCredit"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="5dp">


        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <View
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_height="2dip" />

        <TextView
            android:id="@+id/credits_subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/credits_subtitle1_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/credits_subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_income"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <TextView
            android:id="@+id/credits_subtitle2_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/credits_subtitle3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_expenditure"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/credits_subtitle3_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/credits_subtitle4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/estimated_balance"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/credits_subtitle4_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/credits_subtitle5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/runout_seconds"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/credits_subtitle5_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/credits_subtitle6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculation_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/credits_subtitle6_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transactions"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <View
            android:id="@+id/line2"
            android:layout_width="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:layout_height="2dip" />

        <TextView
            android:id="@+id/transactions_subtitle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_date_credited"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/transactions_subtitle1_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/transactions_subtitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_date_debited"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <TextView
            android:id="@+id/transactions_subtitle2_body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button_check_credits"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButton1"
            android:text="@string/check_credits" />

        <Button
            android:id="@+id/button_transfer_credits"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorButton2"
            android:text="@string/transfer_credits" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>